--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "golang-library",
+  "name": "go-fetch",
   "private": true,
   "version": "1.0.3",
   "description": "Go Fetch - A Powerful, Lightweight, Easy Http Client, inspired by Web Fetch API.",
